fix overflow

--- a/src/_main.styl
+++ b/src/_main.styl
@@ -57,9 +57,9 @@ body
 
 
 	nav
-		top: 75px
-		position: relative
-		left: calc(25% - 50px)
+		top: 55px
+		position: absolute
+		left: calc(25% - 55px)
 
 		#title
 			color: white
@@ -101,7 +101,7 @@ body
 					transform: scale(4, 1)
 
 	h1
-		font-size: 18px
+		font-size: 18.5px
 		letter-spacing: 0.02em
 		color: #000
 
